# movm

./: Cargo.toml  README.md
examples/: fibonacci.masm  fibonacci.mobc
src/: cli.rs  inst.rs  loader.rs  main.rs  stack.rs  vm.rs
src/asm/: cli.rs  main.rs  parser.rs
src/disasm/: cli.rs  main.rs
src/movm/: inst.rs  loader.rs  main.rs  stack.rs  vm.rs  word.rs
src/runner/: cli.rs  main.rs
