[package]
name = "movm"
version = "0.1.0"
edition = "2021"

[lib]
name = "movm"
path = "src/movm/main.rs"

[[bin]]
name = "runner"
path = "src/runner/main.rs"

[[bin]]
name = "assembler"
path = "src/asm/main.rs"

[[bin]]
name = "disassembler"
path = "src/disasm/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
